# python_with_rust

./: Cargo.toml  README.md  main.py  pyproject.toml
src/: lib.rs
src/python_with_rust/: __init__.py  _core.pyd  _core.pyi
