[project]
name = "python-with-rust"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "maturin>=1.12.4",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "python_with_rust._core"
python-packages = ["python_with_rust"]
python-source = "src"